--- a/frontend/src/app/components/partials/architecture-details-dialog/architecture-details-dialog.component.html
+++ b/frontend/src/app/components/partials/architecture-details-dialog/architecture-details-dialog.component.html
@@ -1,7 +1,7 @@
 
 <div class="dialog-container">
     <div class="dialog-content">
-        <button class="dialog-close-button" (click)="close()">Close</button> <!-- Move close button here -->
+        <button class="dialog-close-button" (click)="close()">Close</button>
         <div *ngIf="architectureDetailsData.selectedArchitecture">
 
             <div class="horisontal-container">
@@ -51,7 +51,7 @@
                 </ng-container>
             </div>
 
-            <button class="dialog-delete-button" (click)="delete()">Delete</button> <!-- Move close button here -->
+            <button class="dialog-delete-button" (click)="delete()">Delete</button>
         </div>
     </div>  
 </div>
