--- a/frontend/src/app/components/partials/create-architecture/create-architecture.component.html
+++ b/frontend/src/app/components/partials/create-architecture/create-architecture.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-container">
     <div class="dialog-content">
         <div>
-            <button class="dialog-close-button" (click)="close()">Close</button> <!-- Move close button here -->
+            <button class="dialog-close-button" (click)="close()">Close</button>
 
             <h3> Create Architecture</h3>
             <div class="property"> 
