--- a/frontend/src/app/components/partials/create-hardware-dialog/create-hardware-dialog.component.html
+++ b/frontend/src/app/components/partials/create-hardware-dialog/create-hardware-dialog.component.html
@@ -1,10 +1,8 @@
 <div class="dialog-container">
     <div class="dialog-content">
         <div>
-        <button class="dialog-close-button" (click)="close()">Close</button> <!-- Move close button here -->
-        
+        <button class="dialog-close-button" (click)="close()">Close</button>
             <h3> Create Hardware</h3>
-
             <div class="property">
                 <h2>Type*: </h2>
                 <div class="dropdown-container" tabindex="0" (blur)="showDropdown = false">
@@ -27,7 +25,6 @@
                 <h2>Description*: </h2>
                 <textarea class="textarea-description" type="text" placeholder="Description" [(ngModel)]="newHardwareDescription"></textarea>
             </div>
-
         </div>
         <button class="dialog-save-button" [disabled]="!true" (click)="save()">Save</button> 
     </div>
