--- a/frontend/src/app/components/partials/service-dialog/service-dialog.component.scss
+++ b/frontend/src/app/components/partials/service-dialog/service-dialog.component.scss
@@ -11,8 +11,8 @@
 } 
 
 .green-button:hover {
-  background-color: #cef8fa; /* Darker shade for hover */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow for a "lift" effect */
+  background-color: #cef8fa; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
 .green-button:active {
@@ -66,7 +66,7 @@
     font-size: 1rem;
     color: #666;
     display: grid;
-    grid-template-columns: 20% 70% 10%; /* 80/20 split */
+    grid-template-columns: 20% 70% 10%;
     gap: 5px;
     margin-bottom: 10px;
   }
@@ -74,7 +74,7 @@
   
   .property-name,
   .property-value{
-    white-space: normal; /* Allows text to wrap */
+    white-space: normal;
     word-break: break-word; 
   }
 
@@ -84,14 +84,13 @@
   
   .input-sidebar {
     display: grid;
-    grid-template-columns: 20% 69% 10%; /* 80/20 split */
+    grid-template-columns: 20% 69% 10%;
     gap: 5px;
     margin-bottom: 10px;
   }
   
   .input-field {
     padding: 10px;
-    //margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 1rem;
@@ -111,8 +110,6 @@
     color: transparent;
   }
   
-  
-  
   .dialog-close-button {
     position: absolute;
     top: 5px;
@@ -126,8 +123,6 @@
     padding: 10px 20px;
     z-index: 10;
   }
-  
-  
   
   .dialog-close-button:hover {
     background-color: #e3a3a9;
@@ -176,8 +171,8 @@
   }
   
   .dialog-save-button:hover {
-    background-color: #cef8fa; /* Darker shade for hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow for a "lift" effect */
+    background-color: #cef8fa; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
   }
   
   .dialog-save-button:active {
@@ -190,11 +185,10 @@
     height: auto;
     font-size: 1rem;
     margin-right: 10px;
-    white-space: pre-line; /* Allows text to wrap */
+    white-space: pre-line; 
     word-break: break-word; 
   }
 
-  
   .add-property-button {
     width: 100%;
     margin-left: 5px;
@@ -218,9 +212,6 @@
     color: white;
   }
 
-
-
-  //-------------------------------------------
   .dialog-container {
     position: fixed;
     top: 0;
@@ -247,12 +238,10 @@
     animation: slideIn 0.3s ease-out;
   }
   
-
   .dialog-delete-button {
     padding: 12px 24px;
     border-radius: 6px;
     cursor: pointer;
-    //transition: background-color 0.3s ease;
     background-color: white;
     border: 2px solid #801D1A;
   }
@@ -261,7 +250,6 @@
     background-color: #e3a3a9;
   }
 
-  //-------------------------
   .manipulation-button {
     display: flex;
     justify-content: left;
