--- a/frontend/src/app/components/partials/create-service-infrastructure-dialog/create-service-infrastructure-dialog.component.scss
+++ b/frontend/src/app/components/partials/create-service-infrastructure-dialog/create-service-infrastructure-dialog.component.scss
@@ -131,8 +131,8 @@
   }
   
   .dialog-save-button:hover {
-    background-color: #cef8fa; /* Darker shade for hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow for a "lift" effect */
+    background-color: #cef8fa;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
   .dialog-save-button:active {
