--- a/frontend/src/app/components/partials/data-stream-dialog/data-stream-dialog.component.scss
+++ b/frontend/src/app/components/partials/data-stream-dialog/data-stream-dialog.component.scss
@@ -60,7 +60,7 @@
     font-size: 1rem;
     color: #666;
     display: grid;
-    grid-template-columns: 20% 70% 10%; /* 80/20 split */
+    grid-template-columns: 20% 70% 10%;
     gap: 5px;
     margin-bottom: 10px;
   }
@@ -79,8 +79,6 @@
     z-index: 10;
   }
   
-  
-  
   .dialog-close-button:hover {
     background-color: #e3a3a9;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -90,11 +88,6 @@
     background-color: #801D1A;
     color: white;
   }
-  
-
-
-
-
   
   .manipulation-button {
     display: flex;
@@ -125,14 +118,13 @@
   
   .input-sidebar {
     display: grid;
-    grid-template-columns: 20% 70% 10%; /* 80/20 split */
+    grid-template-columns: 20% 70% 10%;
     gap: 5px;
     margin-bottom: 10px;
   }
   
   .input-field {
     padding: 10px;
-    //margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 1rem;
@@ -151,7 +143,6 @@
   .input-field:focus::placeholder {
     color: transparent;
   }
-  
 
   .horisontal-container {
     display: flex;
@@ -173,8 +164,8 @@
   }
   
   .dialog-save-button:hover {
-    background-color: #cef8fa; /* Darker shade for hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow for a "lift" effect */
+    background-color: #cef8fa;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
   
   .dialog-save-button:active {
@@ -241,20 +232,20 @@
     height: auto;
     font-size: 1rem;
     margin-right: 10px;
-    white-space: pre-line; /* Allows text to wrap */
+    white-space: pre-line;
     word-break: break-word; 
   }
 
   .input-sidebar {
     display: grid;
-    grid-template-columns: 20% 70% 10%; /* 80/20 split */
+    grid-template-columns: 20% 70% 10%;
     gap: 5px;
     margin-bottom: 10px;
   }
 
   .property-name,
   .property-value{
-    white-space: normal; /* Allows text to wrap */
+    white-space: normal;
     word-break: break-word; 
   }
 
